2009-11-06  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Pavel Feldman.

        Fix resource content search.
        https://bugs.webkit.org/show_bug.cgi?id=31202

        * inspector/front-end/AbstractTimelinePanel.js:
        (WebInspector.AbstractTimelinePanel.prototype.refresh):
        (WebInspector.AbstractTimelinePanel.prototype.removeItem):
        * inspector/front-end/TimelinePanel.js:
        (WebInspector.TimelineGraph.prototype.refresh):

2009-11-05  Yuta Kitamura  <yutak@chromium.org>

        Reviewed by Eric Seidel.

        Fix ASSERT(currentStyle = renderStyle()).
        https://bugs.webkit.org/show_bug.cgi?id=31152

        * dom/Element.cpp:
        (WebCore::Element::pseudoStyleCacheIsInvalid): We should have used "==" instead of "=".

2009-11-05  Alpha Lam  <hclam@chromium.org>

        Revert 50562 because it broke Chromium. Not reviewed since this is a build fix and revert.

        * bindings/v8/V8GCController.cpp:
        (WebCore::V8GCController::gcEpilogue):
        * bindings/v8/V8GCController.h:
        * bindings/v8/V8Proxy.cpp:
        (WebCore::V8Proxy::evaluate):
        (WebCore::V8Proxy::runScript):
        (WebCore::V8Proxy::callFunction):

2009-11-05  Adam Barth  <abarth@webkit.org>

        Reviewed by Sam Weinig.

        Cross-domain access to stylesheet text should not be allowed
        https://bugs.webkit.org/show_bug.cgi?id=20527

        Check whether whether the current document can read the cssRules from
        the style sheet.  Firefox throws a security error here, but we return
        null instead because that's what we usually do in these cases.

        Test: http/tests/security/cannot-read-cssrules-redirect.html
              http/tests/security/cannot-read-cssrules.html

        * css/CSSStyleSheet.cpp:
        (WebCore::CSSStyleSheet::cssRules):

2009-11-05  Steve Block  <steveblock@google.com>

        Reviewed by Eric Seidel.
