@@ -1,3 +1,13 @@
+2009-11-06  Anton Muhin  <antonm@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        Do not unnecessarly synchronzie in weak reference callbacks.
+        https://bugs.webkit.org/show_bug.cgi?id=31191
+
+        * bindings/v8/DOMData.h:
+        (WebCore::DOMData::handleWeakObject):
+
 2009-11-06  Alexander Pavlov  <apavlov@chromium.org>
 
         Reviewed by Pavel Feldman.
